v4-cokapi/backends/javascript/tests/syntax-error.js
var x = 5;
if (x) {
  console.log(x);
else {
  console.log('crapo');
}
